bugfix collapse

--- a/styles/Sidebar.module.scss
+++ b/styles/Sidebar.module.scss
@@ -51,17 +51,36 @@
   background-color: lightgray !important;
   box-sizing: border-box !important;
   overflow: hidden !important;
+  min-height: 30rem;
   max-height: 30rem;
   width: 0;
   overflow: hidden;
   animation-duration: 1s;
   animation-name: collapse;
 
+  h1 {
+    display: flex;
+    padding: 0.1em;
+    opacity: 0.5;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  button {
+    display: flex !important;
+    padding: 1em;
+    justify-content: space-between !important;
+    align-items: flex-end !important;
+    font-size: 16px !important;
+    font-family: unset !important;
+  }
+
   .icon {
     position: absolute !important;
   }
 }
 
+// collapse sidebar has bugs in it wont maintain shape
 @keyframes collapse {
   from {
     width: 20rem;
